k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ecommerce.local
      http:
        paths:
          - path: /ECommerce
            pathType: Prefix
            backend:
              service:
                name: ecommerce-backend
                port:
                  number: 8080
